0310 add page_str

--- a/Projects/HostManager/templates/app.html
+++ b/Projects/HostManager/templates/app.html
@@ -118,6 +118,11 @@
     {% endfor %}
     </table>
 
+    <!-- 分页 -->
+    <ul class="pagination pagination-sm">
+        {{ page_str }}
+    </ul>
+
 {% endblock %}
 
 {% block js %}
@@ -139,7 +144,13 @@
                         }
                     }
                 })
-            })
+            });
+
+            <!-- 这里是为了解决bootstrap添加active类冲突问题 -->
+            $(function(){
+                $('.activ').addClass('active');
+            });
+
         });
         function del_app(nid) {
             $('#del_app').modal();
