--- a/Projects/HostManager/templates/home.html
+++ b/Projects/HostManager/templates/home.html
@@ -52,6 +52,17 @@
             border-radius: 0px !important;
 
         }
+{#        .pagination .page{#}
+{#            display: inline-block;#}
+{#            padding: 5px;#}
+{#            background-color: cyan;#}
+{#            margin: 5px;#}
+{#        }#}
+{#        .pagination .page.active{#}
+{#            background-color: brown;#}
+{#            color: white;#}
+{#        }#}
+
     </style>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/bootstrap-select.css">
