--- a/Projects/HostManager/templates/app.html
+++ b/Projects/HostManager/templates/app.html
@@ -1,4 +1,7 @@
 {% extends 'home.html' %}
+{% block head %}
+      <a style="color:white; text-decoration: none;">{{ user_name.name }}</a>
+{% endblock %}
 {% block body %}
 
     <p>应用管理 >></p>
