--- a/Projects/HostManager/templates/hosts.html
+++ b/Projects/HostManager/templates/hosts.html
@@ -1,4 +1,7 @@
 {% extends 'home.html' %}
+{% block head %}
+      <a style="color:white; text-decoration: none;">{{ user_name.name }}</a>
+{% endblock %}
 {% block body %}
         <p>主机管理&nbsp;&gt;&gt;</p>
 
@@ -186,6 +189,17 @@
     {% endfor %}
         </table>
 
+    <!-- cookie 自定义每页显示多少条数据 -->
+    <div>
+        <select id="ps" onchange="changePageSize(this);">
+            <option value="10">10</option>
+            <option value="30">30</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+        </select>
+    </div>
+    <a id="pss">{{ page_init.per_page_count }}</a>
+
     <!-- 分页 -->
     <ul class="pagination pagination-sm">
         {{ page_str|safe }}
@@ -197,6 +211,17 @@
     <script src="/static/js/bootstrap-select.js"></script>
     <script>
         $(function () {
+
+            <!-- 取cookie值 干嘛加路径 搞了我一晚上！！！！！！！ -->
+            var v = $.cookie('per_page_count');
+            alert(v);
+            alert(v.length);
+            if(v.length < 5){
+                $('#ps').val(v);
+            }else {
+                $('#ps').val(10);
+            }
+
             <!-- 创建主机模态对话框ajax请求 -->
             $('#save').click(function () {
                 $.ajax({
@@ -312,6 +337,14 @@
                     }
                 })
             })
+        }
+
+        <!-- 设置每页显示条数 -->
+        function changePageSize(ths){
+            var v = $(ths).val();
+            $.cookie('per_page_count',v, {'path': "/hosts/"});
+            location.reload();
+            alert($.cookie('per_page_count'));
         }
     </script>
 {% endblock %}
