--- a/Projects/obj19/templates/index.html
+++ b/Projects/obj19/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    111
+    {{ username }},{{ request.session.username }}
+    <a href="/logout/">注销</a>
 </body>
 </html>
