signal form middle has done

--- a/Projects/HostManager/templates/home.html
+++ b/Projects/HostManager/templates/home.html
@@ -78,7 +78,7 @@
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" style="min-width: 0">
-            <li role="presentation"><a id="logout" role="menuitem" tabindex="-1" href="#">注销</a></li>
+            <li role="presentation"><a id="logou" role="menuitem" tabindex="-1" href="/logout/">注销</a></li>
           </ul>
         </div>
 
