--- a/Projects/xxdCmdb/web/templates/index.html
+++ b/Projects/xxdCmdb/web/templates/index.html
@@ -45,7 +45,7 @@
         <div class="col-lg-3 col-sm-4 col-xs-6">
             <div class="info-box flow-bg">
                 <i class="fa fa-recycle"></i>
-                <a class="count" href="/publisher/index/">发布</a>
+                <a class="count" href="#">发布</a>
 
                 <div class="title">publisher</div>
             </div>
@@ -54,7 +54,7 @@
         <div class="col-lg-3 col-sm-4 col-xs-6">
             <div class="info-box blue-bg">
                 <i class="fa fa-cog"></i>
-                <a class="count" href="/configration/order/">配管</a>
+                <a class="count" href="#">配管</a>
 
                 <div class="title">configuration</div>
             </div>
