--- a/Projects/xxdCmdb/web/templates/layout/_laytask.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laytask.html
@@ -16,11 +16,11 @@
 </div>
 <div class="pg-body">
     <div class="menu">
-        <a id="menu_asset" class="menu-item" href="/asset.html">
+        <a id="menu_asset" class="menu-item" href="/task_physical.html">
             <i class="fa fa-connectdevelop" aria-hidden="true"></i>
             <span>物理机装机</span>
         </a>
-        <a id="menu_user_profile" class="menu-item" href="/users.html">
+        <a id="menu_user_profile" class="menu-item" href="#">
             <i class="fa fa-cogs" aria-hidden="true"></i>
             <span>虚拟机装机</span>
         </a>
